--- a/index.html
+++ b/index.html
@@ -13,44 +13,46 @@
     <!--Шапка сайта-->
     <header>
         <nav>
-            <a lang="en" href="./index.html"><span>Web</span>studio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a lang="en" href="./index.html" class="logo"><span class="web">Web</span>studio</a>
+            <ul class="site-nav">
+                <li><a class="link current" href="">Студия</a></li>
+                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts">
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--Основной уникальный контент-->
     <main>
-        <section>
+        <section class="banner">
             <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
+            <a href="" class="order">Заказать услугу</a>
         </section>
 
         <!--Наши преимущества-->
         <section>
             <h2 hidden>Наши преимущества</h2>
-            <ul>
+            <ul class="advantages">
                 <li>
                     <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="desc">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                    </p>
                 </li>
                 <li>
                     <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="desc">Равным образом консультация с широким активом в значительной степени обуславливает.
+                    </p>
                 </li>
                 <li>
                     <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="desc">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -66,35 +68,35 @@
             </ul>
         </section>
         <!--Наши специалисты-->
-        <section>
+        <section class="ourteam">
             <h2>Наша команда</h2>
             <ul>
                 <li>
                     <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p class="desc">Product Designer</p>
                     <a href=""><img src="./images/our-team/Igor.jpg" alt="фото Игоря Демьяненко" width="270"></a>
                 </li>
                 <li>
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p class="desc">Frontend Developer</p>
                     <a href=""><img src="./images/our-team/Olga.jpg" alt="фото Ольги Репиной" width="270"></a>
                 </li>
                 <li>
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="desc">Marketing</p>
                     <a href=""><img src="./images/our-team/Nikolay.jpg" alt="фото Николая Тарасова" width="270"></a>
                 </li>
                 <li>
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p class="desc">UI Designer</p>
                     <a href=""><img src="./images/our-team/Mickael.jpg" alt="фото Михаила Ермакова" width="270"></a>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a lang="en" href="/"><span>Web</span>studio</a>
-        <address>
+    <footer class="footer">
+        <a lang="en" href="/"><span class="web">Web</span>studio</a>
+        <address class="address">
             г. Киев, пр-т Леси Украинки, 26
             <a href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+380991111111">+38 099 111 11 11</a>
