--- a/portfolio.html
+++ b/portfolio.html
@@ -13,16 +13,16 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a lang="en" href="./index.html"><span>Web</span>studio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a lang="en" href="./index.html" class="logo"><span class="web">Web</span>studio</a>
+            <ul class="site-nav">
+                <li><a class="link" href="">Студия</a></li>
+                <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li lang="en"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts">
+            <li lang="en"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- Основной контент -->
@@ -30,69 +30,69 @@
         <section>
             <h1 hidden>Галерея работ</h1>
             <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button type="button" class="button">Все</button></li>
+                <li><button type="button" class="button">Веб-сайты</button></li>
+                <li><button type="button" class="button">Приложения</button></li>
+                <li><button type="button" class="button">Дизайн</button></li>
+                <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
             <ul>
                 <li>
                     <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <p class="desc">Веб-сайт</p>
                     <img src="./images/gallery/technoduck.jpg" alt="Презентация сайта компании Технокряк" width="370"
                         height="294">
                 </li>
                 <li>
                     <h2>Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
-                    <p>Дизайн</p><img src="./images/gallery/poster-neworleans.jpg"
+                    <p class="desc">Дизайн</p><img src="./images/gallery/poster-neworleans.jpg"
                         alt="Дизайн постера для баскетбольного матча команд Нового Орлеана и Золотых Звёзд" width="370"
                         height="294">
                 </li>
                 <li>
                     <h2 lang="en">Ресторан <span lang="en">Seafood</span></h2>
-                    <p>Приложение</p><img src="/images/gallery/restaurant-seafood.jpg"
+                    <p class="desc">Приложение</p><img src="/images/gallery/restaurant-seafood.jpg"
                         alt="Дизайн приложения для рыбного ресторана" width="370" height="294">
                 </li>
 
                 <li>
                     <h2>Проект <span lang="en">Prime</span></h2>
-                    <p>Маркетинг</p><img src="./images/gallery/headphones.jpg"
+                    <p class="desc">Маркетинг</p><img src="./images/gallery/headphones.jpg"
                         alt="Презентация маркетинг-проекта с наушниками" width="370" height="294">
                 </li>
                 <li>
                     <h2>Проект <span lang="en">Boxes</span></h2>
-                    <p>Приложение</p><img src="./images/gallery/boxes.jpg" alt="Дизайн приложения проекта Коробки"
-                        width="370" height="294">
+                    <p class="desc">Приложение</p><img src="./images/gallery/boxes.jpg"
+                        alt="Дизайн приложения проекта Коробки" width="370" height="294">
                 </li>
                 <li>
                     <h2 lang="en">Inspiration has no Borders</h2>
-                    <p></p><img src="./images/gallery/web-inspiration.jpg"
+                    <p class="desc">Веб-сайт</p><img src="./images/gallery/web-inspiration.jpg"
                         alt="Презентация веб-сайта Вдохновение не имеет границ" width="370" height="294">
                 </li>
 
                 <li>
                     <h2>Издание <span lang="en">Limited Edition</span></h2>
-                    <p>Дизайн</p><img src="./images/gallery/book.jpg" alt="Дизайн издания Лимитед Едишн" width="370"
-                        height="294">
+                    <p class="desc">Дизайн</p><img src="./images/gallery/book.jpg" alt="Дизайн издания Лимитед Едишн"
+                        width="370" height="294">
                 </li>
                 <li>
                     <h2>Проект <span lang="en">LAB</span></h2>
-                    <p>Маркетинг</p><img src="./images/gallery/birka-lab.jpg"
+                    <p class="desc">Маркетинг</p><img src="./images/gallery/birka-lab.jpg"
                         alt="Презентация маркетинг-проекта на бирке Лаб" width="370" height="294">
                 </li>
                 <li>
                     <h2 lang="en">Growing Business</h2>
-                    <p>Приложение</p><img src="./images/gallery/hand-app.jpg" alt="Презентация приложения" width="370"
-                        height="294">
+                    <p class="desc">Приложение</p><img src="./images/gallery/hand-app.jpg" alt="Презентация приложения"
+                        width="370" height="294">
                 </li>
             </ul>
         </section>
     </main>
     <!-- Подвал -->
-    <footer>
-        <a lang="en" href="/"><span>Web</span>studio</a>
-        <address>
+    <footer class="footer">
+        <a lang="en" href="/"><span class="web">Web</span>studio</a>
+        <address class="address">
             г. Киев, пр-т Леси Украинки, 26
             <a href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+380991111111">+38 099 111 11 11</a>
