--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
@@ -13,29 +18,29 @@
     <!--Шапка сайта-->
     <header>
         <nav>
-            <a lang="en" href="./index.html" class="logo"><span class="web">Web</span>studio</a>
-            <ul class="site-nav">
+            <a lang="en" href="./index.html" class="logo link"><span class="web">Web</span>studio</a>
+            <ul class="site-nav list">
                 <li><a class="link current" href="">Студия</a></li>
                 <li><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="contacts">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts list">
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--Основной уникальный контент-->
     <main>
         <section class="banner">
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <a href="" class="order">Заказать услугу</a>
+            <h1 class="tagline">Эффективные решения для вашего бизнеса</h1>
+            <a href="" class="order  link">Заказать услугу</a>
         </section>
 
         <!--Наши преимущества-->
         <section>
             <h2 hidden>Наши преимущества</h2>
-            <ul class="advantages">
+            <ul class="advantages list">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p class="desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -58,48 +63,48 @@
         </section>
         <!--Чем мы занимаемся-->
         <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li> <a href=""><img src="./images/keyboards.png" alt="Печатает на клавиатуре" width="370"></a></li>
-                <li> <a href=""><img src="./images/lookatthephone.png" alt="Смотрит на телефон и на экран"
+            <h2 class="heading">Чем мы занимаемся</h2>
+            <ul class="list">
+                <li> <a href=""><img src="./images/keyboards.jpg" alt="Печатает на клавиатуре" width="370"></a></li>
+                <li> <a href=""><img src="./images/lookatthephone.jpg" alt="Смотрит на телефон и на экран"
                             width="370"></a></li>
-                <li> <a href=""><img src="./images/lookatthepalette.png" alt="Смотрит на цветовую палитру"
+                <li> <a href=""><img src="./images/lookatthepalette.jpg" alt="Смотрит на цветовую палитру"
                             width="370"></a></li>
             </ul>
         </section>
         <!--Наши специалисты-->
         <section class="ourteam">
-            <h2>Наша команда</h2>
-            <ul>
+            <h2 class="heading">Наша команда</h2>
+            <ul class="list">
                 <li>
                     <h3>Игорь Демьяненко</h3>
                     <p class="desc">Product Designer</p>
-                    <a href=""><img src="./images/our-team/Igor.jpg" alt="фото Игоря Демьяненко" width="270"></a>
+                    <a href=""><img src="./images/our-team/igor.jpg" alt="фото Игоря Демьяненко" width="270"></a>
                 </li>
                 <li>
                     <h3>Ольга Репина</h3>
                     <p class="desc">Frontend Developer</p>
-                    <a href=""><img src="./images/our-team/Olga.jpg" alt="фото Ольги Репиной" width="270"></a>
+                    <a href=""><img src="./images/our-team/olga.jpg" alt="фото Ольги Репиной" width="270"></a>
                 </li>
                 <li>
                     <h3>Николай Тарасов</h3>
                     <p class="desc">Marketing</p>
-                    <a href=""><img src="./images/our-team/Nikolay.jpg" alt="фото Николая Тарасова" width="270"></a>
+                    <a href=""><img src="./images/our-team/nikolay.jpg" alt="фото Николая Тарасова" width="270"></a>
                 </li>
                 <li>
                     <h3>Михаил Ермаков</h3>
                     <p class="desc">UI Designer</p>
-                    <a href=""><img src="./images/our-team/Mickael.jpg" alt="фото Михаила Ермакова" width="270"></a>
+                    <a href=""><img src="./images/our-team/mickael.jpg" alt="фото Михаила Ермакова" width="270"></a>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a lang="en" href="/"><span class="web">Web</span>studio</a>
+        <a lang="en" href="./index.html" class="logo link"><span class="web">Web</span>studio</a>
         <address class="address">
             г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
+            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
         </address>
     </footer>
 
