--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
@@ -13,30 +18,30 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a lang="en" href="./index.html" class="logo"><span class="web">Web</span>studio</a>
-            <ul class="site-nav">
-                <li><a class="link" href="">Студия</a></li>
+            <a lang="en" href="./index.html" class="logo link"><span class="web">Web</span>studio</a>
+            <ul class="site-nav list">
+                <li><a href="" class="link">Студия</a></li>
                 <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="contacts">
-            <li lang="en"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts list">
+            <li lang="en"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- Основной контент -->
     <main>
-        <section>
+        <section class="gallery">
             <h1 hidden>Галерея работ</h1>
-            <ul>
+            <ul class="list">
                 <li><button type="button" class="button">Все</button></li>
                 <li><button type="button" class="button">Веб-сайты</button></li>
                 <li><button type="button" class="button">Приложения</button></li>
                 <li><button type="button" class="button">Дизайн</button></li>
                 <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <h2>Технокряк</h2>
                     <p class="desc">Веб-сайт</p>
@@ -78,7 +83,7 @@
                 </li>
                 <li>
                     <h2>Проект <span lang="en">LAB</span></h2>
-                    <p class="desc">Маркетинг</p><img src="./images/gallery/birka-lab.jpg"
+                    <p class="desc">Маркетинг</p><img src="./images/gallery/label-lab.jpg"
                         alt="Презентация маркетинг-проекта на бирке Лаб" width="370" height="294">
                 </li>
                 <li>
@@ -91,11 +96,11 @@
     </main>
     <!-- Подвал -->
     <footer class="footer">
-        <a lang="en" href="/"><span class="web">Web</span>studio</a>
+        <a lang="en" href="./index.html" class="logo link"><span class="web">Web</span>studio</a>
         <address class="address">
             г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
+            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
         </address>
     </footer>
 </body>
