--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <nav>
             <a lang="en" href="./index.html" class="logo link"><span class="web">Web</span>studio</a>
             <ul class="site-nav list">
-                <li><a class="link current" href="">Студия</a></li>
-                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link" href="">Контакты</a></li>
+                <li><a href="./index.html" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contacts list">
@@ -79,22 +79,22 @@
                 <li>
                     <h3>Игорь Демьяненко</h3>
                     <p class="desc">Product Designer</p>
-                    <a href=""><img src="./images/our-team/igor.jpg" alt="фото Игоря Демьяненко" width="270"></a>
+                    <a href=""><img src="" alt="фото Игоря Демьяненко" width="270"></a>
                 </li>
                 <li>
                     <h3>Ольга Репина</h3>
                     <p class="desc">Frontend Developer</p>
-                    <a href=""><img src="./images/our-team/olga.jpg" alt="фото Ольги Репиной" width="270"></a>
+                    <a href=""><img src="" alt="фото Ольги Репиной" width="270"></a>
                 </li>
                 <li>
                     <h3>Николай Тарасов</h3>
                     <p class="desc">Marketing</p>
-                    <a href=""><img src="./images/our-team/nikolay.jpg" alt="фото Николая Тарасова" width="270"></a>
+                    <a href=""><img src="" alt="фото Николая Тарасова" width="270"></a>
                 </li>
                 <li>
                     <h3>Михаил Ермаков</h3>
                     <p class="desc">UI Designer</p>
-                    <a href=""><img src="./images/our-team/mickael.jpg" alt="фото Михаила Ермакова" width="270"></a>
+                    <a href=""><img src="" alt="фото Михаила Ермакова" width="270"></a>
                 </li>
             </ul>
         </section>
