--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
         <nav>
             <a lang="en" href="./index.html" class="logo link"><span class="web">Web</span>studio</a>
             <ul class="site-nav list">
-                <li><a href="" class="link">Студия</a></li>
-                <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link" href="">Контакты</a></li>
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contacts list">
