--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
                 <li>
                     <h3>Игорь Демьяненко</h3>
                     <p class="desc">Product Designer</p>
-                    <a href=""><img src="" alt="фото Игоря Демьяненко" width="270"></a>
+                    <a href=""><img src="./images/our-team/igor.jpg" alt="фото Игоря Демьяненко" width="270"></a>
                 </li>
                 <li>
                     <h3>Ольга Репина</h3>
                     <p class="desc">Frontend Developer</p>
-                    <a href=""><img src="" alt="фото Ольги Репиной" width="270"></a>
+                    <a href=""><img src="./images/our-team/olga.jpg" alt="фото Ольги Репиной" width="270"></a>
                 </li>
                 <li>
                     <h3>Николай Тарасов</h3>
                     <p class="desc">Marketing</p>
-                    <a href=""><img src="" alt="фото Николая Тарасова" width="270"></a>
+                    <a href=""><img src="./images/our-team/nikolay.jpg" alt="фото Николая Тарасова" width="270"></a>
                 </li>
                 <li>
                     <h3>Михаил Ермаков</h3>
                     <p class="desc">UI Designer</p>
-                    <a href=""><img src="" alt="фото Михаила Ермакова" width="270"></a>
+                    <a href=""><img src="./images/our-team/mickael.jpg" alt="фото Михаила Ермакова" width="270"></a>
                 </li>
             </ul>
         </section>
