Переделала теги на классы

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
             <h2 class="heading">Наша команда</h2>
             <ul class="list">
                 <li>
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="heading-team">Игорь Демьяненко</h3>
                     <p class="desc">Product Designer</p>
                     <a href=""><img src="./images/our-team/igor.jpg" alt="фото Игоря Демьяненко" width="270"></a>
                 </li>
                 <li>
-                    <h3>Ольга Репина</h3>
+                    <h3 class="heading-team">Ольга Репина</h3>
                     <p class="desc">Frontend Developer</p>
                     <a href=""><img src="./images/our-team/olga.jpg" alt="фото Ольги Репиной" width="270"></a>
                 </li>
                 <li>
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="heading-team">Николай Тарасов</h3>
                     <p class="desc">Marketing</p>
                     <a href=""><img src="./images/our-team/nikolay.jpg" alt="фото Николая Тарасова" width="270"></a>
                 </li>
                 <li>
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="heading-team">Михаил Ермаков</h3>
                     <p class="desc">UI Designer</p>
                     <a href=""><img src="./images/our-team/mickael.jpg" alt="фото Михаила Ермакова" width="270"></a>
                 </li>
