--- a/portfolio.html
+++ b/portfolio.html
@@ -43,51 +43,51 @@
             </ul>
             <ul class="list">
                 <li>
-                    <h2>Технокряк</h2>
+                    <h2 class="heading-gallery">Технокряк</h2>
                     <p class="desc">Веб-сайт</p>
                     <img src="./images/gallery/technoduck.jpg" alt="Презентация сайта компании Технокряк" width="370"
                         height="294">
                 </li>
                 <li>
-                    <h2>Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
+                    <h2 class="heading-gallery">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
                     <p class="desc">Дизайн</p><img src="./images/gallery/poster-neworleans.jpg"
                         alt="Дизайн постера для баскетбольного матча команд Нового Орлеана и Золотых Звёзд" width="370"
                         height="294">
                 </li>
                 <li>
-                    <h2 lang="en">Ресторан <span lang="en">Seafood</span></h2>
+                    <h2 class="heading-gallery" lang="en">Ресторан <span lang="en">Seafood</span></h2>
                     <p class="desc">Приложение</p><img src="/images/gallery/restaurant-seafood.jpg"
                         alt="Дизайн приложения для рыбного ресторана" width="370" height="294">
                 </li>
 
                 <li>
-                    <h2>Проект <span lang="en">Prime</span></h2>
+                    <h2 class="heading-gallery">Проект <span lang="en">Prime</span></h2>
                     <p class="desc">Маркетинг</p><img src="./images/gallery/headphones.jpg"
                         alt="Презентация маркетинг-проекта с наушниками" width="370" height="294">
                 </li>
                 <li>
-                    <h2>Проект <span lang="en">Boxes</span></h2>
+                    <h2 class="heading-gallery">Проект <span lang="en">Boxes</span></h2>
                     <p class="desc">Приложение</p><img src="./images/gallery/boxes.jpg"
                         alt="Дизайн приложения проекта Коробки" width="370" height="294">
                 </li>
                 <li>
-                    <h2 lang="en">Inspiration has no Borders</h2>
+                    <h2 class="heading-gallery" lang="en">Inspiration has no Borders</h2>
                     <p class="desc">Веб-сайт</p><img src="./images/gallery/web-inspiration.jpg"
                         alt="Презентация веб-сайта Вдохновение не имеет границ" width="370" height="294">
                 </li>
 
                 <li>
-                    <h2>Издание <span lang="en">Limited Edition</span></h2>
+                    <h2 class="heading-gallery">Издание <span lang="en">Limited Edition</span></h2>
                     <p class="desc">Дизайн</p><img src="./images/gallery/book.jpg" alt="Дизайн издания Лимитед Едишн"
                         width="370" height="294">
                 </li>
                 <li>
-                    <h2>Проект <span lang="en">LAB</span></h2>
+                    <h2 class="heading-gallery">Проект <span lang="en">LAB</span></h2>
                     <p class="desc">Маркетинг</p><img src="./images/gallery/label-lab.jpg"
                         alt="Презентация маркетинг-проекта на бирке Лаб" width="370" height="294">
                 </li>
                 <li>
-                    <h2 lang="en">Growing Business</h2>
+                    <h2 class="heading-gallery" lang="en">Growing Business</h2>
                     <p class="desc">Приложение</p><img src="./images/gallery/hand-app.jpg" alt="Презентация приложения"
                         width="370" height="294">
                 </li>
